# ish-arm64

./: .gitignore  Makefile  ORIGINAL_README.md  README.md  README_arm64.md  README_arm64_zh.md  main.c  meson.build  meson_options.txt  misc.h  xX_main_Xx.h
.pi/skills/ish-arm64-bun-gdb/: SKILL.md
app/: AboutViewController.m  AppARM64-ffmpeg.xcconfig  AppDelegate.m  AppGroup.m  CurrentRoot.h  CurrentRoot.m  FakeFFmpeg.m  GuestARM64.xcconfig  gen_apk_repositories.py  xcode-meson.sh
app/Base.lproj/: About.storyboard
app/RootfsPatch.bundle/: manifest.plist
app/RootfsPatch.bundle/files/lib/: fetch-polyfill.js  wasm-polyfill.js
asbestos/: asbestos.c  asbestos.h  frame.h  gen.h  helpers.c  offsets.c
asbestos/guest-arm64/: crypto_helpers.c  gen.c
asbestos/guest-arm64/gadgets-aarch64/: bits.S  control.S  crypto.S  entry.S  gadgets.h  math.S  memory.S
asbestos/guest-x86/: gen.c
asbestos/guest-x86/gadgets-aarch64/: bits.S  control.S  entry.S  gadgets.h  math.S  math.h  memory.S  misc.S  string.S
asbestos/guest-x86/gadgets-x86_64/: gadgets.h
bench/: test_quick.sh
benchmark/: BENCHMARK_COMPAT.md  BENCHMARK_PERF.md  create_fakefs.py  run.sh
benchmark/assets/: cbench.c  cbench_lite.c  cbench_lite_arm64  cbench_lite_macos  cbench_lite_x86  nodebench.js  pybench.py  shellbench.sh
docs/: ARM64_SMOKE_ISSUES_AND_SYSCALL_COVERAGE.md  ARM64_WORKLOAD_SMOKE_TESTS.md  BENCHMARKSGAME_GCC_SMOKE.md  BENCHMARKSGAME_GO_SMOKE.md  BENCHMARKSGAME_GPP_SMOKE.md  BENCHMARKSGAME_JAVA_EQUIVALENT_SMOKE.md  BENCHMARKSGAME_LUA_SMOKE.md  BENCHMARKSGAME_MATRIX.md  BENCHMARKSGAME_NODE_SMOKE.md  BENCHMARKSGAME_PERL_SMOKE.md  BENCHMARKSGAME_PHP_SMOKE.md  BENCHMARKSGAME_PYTHON_SMOKE.md  BENCHMARKSGAME_RUBY_SMOKE.md  GO_GTE_PROGRESS.md  LINUX_BUILD_AND_HOST_ABI.md
emu/: cpu.h  interrupt.h  mmu.h  tlb.c  tlb.h
emu/arch/arm64/: cpu.h  decode.h  fpu.c
emu/arch/x86/: cpu.h  decode.h  fpu.c  fpu.h  mmx.c  vec.c
fs/: dir.c  fake-db.c  fake.c  fake.h  fd.c  fd.h  generic.c  inode.c  mem.c  mount.c  path.c  poll.c  proc.c  pty.c  real.c  sock.c  sock.h  stat.c  stat.h  tmp.c  tty.c
fs/proc/: net.c  pid.c  root.c
iSH.xcodeproj/: project.pbxproj
iSH.xcodeproj/xcshareddata/xcdebugger/: Breakpoints_v2.xcbkptlist
iSH.xcodeproj/xcshareddata/xcschemes/: iSH-ARM64-ffmpeg.xcscheme
kernel/: calls.c  calls.h  elf.h  epoll.c  errno.c  exec.c  exit.c  fork.c  fs.c  futex.c  init.c  inotify.c  ipc.c  libfakefs_redirect.c  memory.c  memory.h  misc.c  mm.h  mmap.c  native_offload.c  native_offload.h  poll.c  ptrace.c  ptrace.h  random.c  resource.c  resource.h  signal.c  signal.h  task.c  task.h  time.c  time.h  uname.c  vdso.c
kernel/arch/arm64/: calls.c  signal.h
kernel/arch/x86/: calls.c  signal.h
platform/: darwin.c  host_context_aarch64.h  linux.c  platform.h
tests/arm64/: runtime-coverage.sh
tests/arm64/atomics/: cas128.c  ldxp-stlxp.c
tests/arm64/benchmarksgame/: README.md  generate-matrix.py  run-gcc-smoke.sh  run-go-smoke.sh  run-gpp-smoke.sh  run-java-equivalent-smoke.sh  run-lua-smoke.sh  run-node-smoke.sh  run-perl-smoke.sh  run-php-smoke.sh  run-python-smoke.sh  run-ruby-smoke.sh
tools/: ish_sdl_vnc.c  meson.build  run-sdl-vnc.sh  undefined-flags.c
util/: sync.h
vdso/arm64/: check-cc-arm64.sh  meson.build  vdso.S  vdso.c  vdso.lds
vdso/x86/: meson.build
